--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Menu/Levels/Boot.Boot
 EditorStartupMap=/Game/Menu/Levels/Boot.Boot
@@ -68,6 +66,8 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/TailTrails")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TailTrails")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TailTrails")
+!NetDriverDefinitions=ClearArray
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="SteamSockets.SteamSocketsNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -82,4 +82,38 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[ConsoleVariables]
+net.CurrentHandshakeVersion=2
+net.MinHandshakeVersion=2
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName=SteamSockets.SteamSocketsNetConnection
+
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+MaxClientRate=1000000000
+MaxClientRate=1000000000
+MaxInternetClientRate=1000000000
+MaxInternetClientRate=1000000000
+InitialConnectTimeout=120.0
+InitialConnectTimeout=120.0
+
+[OnlineSubsystemSteam]
+bEnabled=True
+SteamDevAppId=3376260
+SteamAppId=3376260
+GameVersion=1.0.0.0
+bRelaunchInSteam=False
+GameServerPort=7777
+P2PConnectionTimeout=120
+Username=yonan_life
+Password=rubenquereboost
+BranchName=
+ServerName=TailTrails
+ServerDescription=TailTrails
+ServerGameDir=TailTrails
+DepotIds=3376261
 
